--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 appdirs==1.4.4
+authlib
 black==20.8b1
 click==7.1.2
 dnspython==2.0.0
@@ -6,7 +7,9 @@ email-validator==1.1.2
 fastapi==0.62.0
 flake8==3.8.4
 h11==0.11.0
+httpx
 idna==2.10
+itsdangerous
 mccabe==0.6.1
 motor==2.3.0
 mypy_extensions==0.4.3
